--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>My weather app</title>
   </head>
   <body>
+    <main>
+      <section class="search-section"></section>
+      <section class="weather-section">
+        <div class="day-weather-div"></div>
+        <div class="week-weather-div"></div>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
