add info to html and change bg color

--- a/index.html
+++ b/index.html
@@ -8,10 +8,49 @@
   </head>
   <body>
     <main>
-      <section class="search-section"></section>
+      <section class="search-section">
+        <input type="text" placeholder="Enter a place..." />
+        <input type="submit" />
+      </section>
       <section class="weather-section">
-        <div class="day-weather-div"></div>
-        <div class="week-weather-div"></div>
+        <div class="day-weather-div">
+          <span> ⛅ </span>
+          <span> 23ºC </span>
+          <h1>Lisbon</h1>
+          <p>23 de outubro 2023</p>
+          <span>clouds</span>
+          <span>humidity 22</span>
+          <span>wind 12km</span>
+        </div>
+        <div class="week-weather-div">
+          <ul>
+            <li>
+              ⛅
+              <h2>Tuesday</h2>
+              <p>22ºc <span>17ºC</span></p>
+            </li>
+            <li>
+              ⛅
+              <h2>Tuesday</h2>
+              <p>22ºc <span>17ºC</span></p>
+            </li>
+            <li>
+              ⛅
+              <h2>Tuesday</h2>
+              <p>22ºc <span>17ºC</span></p>
+            </li>
+            <li>
+              ⛅
+              <h2>Tuesday</h2>
+              <p>22ºc <span>17ºC</span></p>
+            </li>
+            <li>
+              ⛅
+              <h2>Tuesday</h2>
+              <p>22ºc <span>17ºC</span></p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <script src="script.js"></script>
