added footer and update date (h3)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <span> ⛅ </span>
           <span> 23ºC </span>
           <h1>Lisbon</h1>
-          <p>23 de outubro 2023</p>
+          <h3>23 de outubro 2023</h3>
           <span>clouds</span>
           <span>humidity 22</span>
           <span>wind 12km</span>
@@ -53,6 +53,14 @@
         </div>
       </section>
     </main>
+    <footer>
+      <h3>
+        This project was coded by
+        <a href="https://github.com/Eli032501">Eliana Pereira</a> and is on
+        <a href="https://github.com/Eli032501/My-app-weather">GitHub</a> and
+        hosted on <a href="https://eliana-weather-app.netlify.app/">Netlify</a>
+      </h3>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
