css search section and uptade span current-temp

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <body>
     <main>
       <section class="search-section">
-        <input type="text" placeholder="Enter a place..." />
-        <input type="submit" />
+        <input type="text" placeholder="Enter a place..." class="search-bar" />
+        <input type="submit" class="submit-button" />
       </section>
+      <hr />
       <section class="weather-section">
         <div class="day-weather-div">
-          <span> ⛅ </span>
-          <span> 23ºC </span>
+          <div class="current-temp"><span> ⛅ </span> <span> 23ºC </span></div>
+
           <h1>Lisbon</h1>
           <h3>23 de outubro 2023</h3>
           <span>clouds</span>
