update style date and values, html week days changed

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           </div>
           <div class="div-city-date">
             <h1>Lisbon</h1>
-            <h3>23 de outubro 2023</h3>
-            <span>clouds</span>
-            <span>humidity 22</span>
-            <span>wind 12km</span>
+            <h3>monday, 12 november 2023 | 12:10</h3>
+            <span>Sky: <span class="value-hum-wind">partly cloudy</span></span>
+            <span>Humidity: <span class="value-hum-wind">55%</span></span>
+            <span>Wind: <span class="value-hum-wind">12km/h</span></span>
           </div>
         </div>
         <div class="week-weather-div">
@@ -46,22 +46,22 @@
             </li>
             <li>
               ⛅
-              <h2>Tuesday</h2>
+              <h2>Wednesday</h2>
               <p>22ºc <span>17ºC</span></p>
             </li>
             <li>
               ⛅
-              <h2>Tuesday</h2>
+              <h2>Thursday</h2>
               <p>22ºc <span>17ºC</span></p>
             </li>
             <li>
               ⛅
-              <h2>Tuesday</h2>
+              <h2>Friday</h2>
               <p>22ºc <span>17ºC</span></p>
             </li>
             <li>
               ⛅
-              <h2>Tuesday</h2>
+              <h2>Saturday</h2>
               <p>22ºc <span>17ºC</span></p>
             </li>
           </ul>
