change sky info and week-icons + display

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
       <section class="weather-section">
         <div class="day-weather-div">
           <div class="div-current-temp">
-            <span class="material-symbols-outlined"> partly_cloudy_day </span>
+            <span class="material-symbols-outlined main-icon">
+              partly_cloudy_day
+            </span>
             <span class="current-temp"> 23ºC </span>
           </div>
           <div class="div-city-date">
             <h1>Lisbon</h1>
             <h3>monday, 12 november 2023 | 12:10</h3>
-            <span>Sky: <span class="value-hum-wind">partly cloudy</span></span>
+            <span class="value-hum-wind">Partly Cloudy</span>
             <span>Humidity: <span class="value-hum-wind">55%</span></span>
             <span>Wind: <span class="value-hum-wind">12km/h</span></span>
           </div>
@@ -40,29 +42,39 @@
         <div class="week-weather-div">
           <ul>
             <li>
-              ⛅
-              <h2>Tuesday</h2>
-              <p>22ºc <span>17ºC</span></p>
+              <span class="material-symbols-outlined"> sunny </span>
+              <span>
+                <h2>Tuesday</h2>
+                <p>22ºc <span>17ºC</span></p>
+              </span>
             </li>
             <li>
-              ⛅
-              <h2>Wednesday</h2>
-              <p>22ºc <span>17ºC</span></p>
+              <span class="material-symbols-outlined week-icon"> sunny </span>
+              <span class="span-weekdays">
+                <h2>Wednesday</h2>
+                <p>22ºc <span>17ºC</span></p>
+              </span>
             </li>
             <li>
-              ⛅
-              <h2>Thursday</h2>
-              <p>22ºc <span>17ºC</span></p>
+              <span class="material-symbols-outlined week-icon"> sunny </span>
+              <span class="span-weekdays">
+                <h2>Thursday</h2>
+                <p>22ºc <span>17ºC</span></p>
+              </span>
             </li>
             <li>
-              ⛅
-              <h2>Friday</h2>
-              <p>22ºc <span>17ºC</span></p>
+              <span class="material-symbols-outlined week-icon"> sunny </span>
+              <span class="span-weekdays">
+                <h2>Friday</h2>
+                <p>22ºc <span>17ºC</span></p>
+              </span>
             </li>
             <li>
-              ⛅
-              <h2>Saturday</h2>
-              <p>22ºc <span>17ºC</span></p>
+              <span class="material-symbols-outlined week-icon"> sunny </span>
+              <span class="span-weekdays">
+                <h2>Saturday</h2>
+                <p>22ºc <span>17ºC</span></p>
+              </span>
             </li>
           </ul>
         </div>
