change h2, h3, update style division week-days

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="div-city-date">
             <h1>Lisbon</h1>
-            <h3>monday, 12 november 2023 | 12:10</h3>
+            <h2>monday, 12 november 2023 | 12:10</h2>
             <span class="value-hum-wind">Partly Cloudy</span>
             <span>Humidity: <span class="value-hum-wind">55%</span></span>
             <span>Wind: <span class="value-hum-wind">12km/h</span></span>
@@ -42,38 +42,38 @@
         <div class="week-weather-div">
           <ul>
             <li>
-              <span class="material-symbols-outlined"> sunny </span>
-              <span>
-                <h2>Tuesday</h2>
-                <p>22ºc <span>17ºC</span></p>
+              <span class="material-symbols-outlined week-icon"> sunny </span>
+              <span class="span-weekdays">
+                <h3>Tuesday</h3>
+                <p>22ºc <span class="value-min">17ºC</span></p>
               </span>
             </li>
             <li>
               <span class="material-symbols-outlined week-icon"> sunny </span>
               <span class="span-weekdays">
-                <h2>Wednesday</h2>
-                <p>22ºc <span>17ºC</span></p>
+                <h3>Wednesday</h3>
+                <p>22ºc <span class="value-min">17ºC</span></p>
               </span>
             </li>
             <li>
               <span class="material-symbols-outlined week-icon"> sunny </span>
               <span class="span-weekdays">
-                <h2>Thursday</h2>
-                <p>22ºc <span>17ºC</span></p>
+                <h3>Thursday</h3>
+                <p>22ºc <span class="value-min">17ºC</span></p>
               </span>
             </li>
             <li>
               <span class="material-symbols-outlined week-icon"> sunny </span>
               <span class="span-weekdays">
-                <h2>Friday</h2>
-                <p>22ºc <span>17ºC</span></p>
+                <h3>Friday</h3>
+                <p>22ºc <span class="value-min">17ºC</span></p>
               </span>
             </li>
             <li>
               <span class="material-symbols-outlined week-icon"> sunny </span>
               <span class="span-weekdays">
-                <h2>Saturday</h2>
-                <p>22ºc <span>17ºC</span></p>
+                <h3>Saturday</h3>
+                <p>22ºc <span class="value-min">17ºC</span></p>
               </span>
             </li>
           </ul>
