change location script abd style files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>My weather app</title>
   </head>
   <body>
@@ -93,6 +93,6 @@
         hosted on <a href="https://eliana-weather-app.netlify.app/">Netlify</a>
       </p>
     </footer>
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
