update layout and icons

--- a/index.html
+++ b/index.html
@@ -88,9 +88,17 @@
     <footer>
       <p>
         This project was coded by
-        <a href="https://github.com/Eli032501">Eliana Pereira</a> and is on
-        <a href="https://github.com/Eli032501/My-app-weather">GitHub</a> and
-        hosted on <a href="https://eliana-weather-app.netlify.app/">Netlify</a>
+        <a href="https://github.com/Eli032501" target="_blank"
+          >Eliana Pereira</a
+        >
+        and is on
+        <a href="https://github.com/Eli032501/My-app-weather" target="_blank"
+          >GitHub</a
+        >
+        and hosted on
+        <a href="https://eliana-weather-app.netlify.app/" target="_blank"
+          >Netlify</a
+        >
       </p>
     </footer>
     <script src="src/script.js"></script>
