--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>My weather app</title>
   </head>
   <body>
     <main>
-      <section class="search-section">
-        <input type="text" placeholder=" Enter a place..." class="search-bar" />
+      <form id="form_search">
+        <input
+          type="text"
+          placeholder=" Enter a place..."
+          class="search-bar"
+          id="input_search"
+        />
         <input type="submit" class="submit-button" />
-      </section>
+      </form>
+
       <hr />
       <section class="weather-section">
         <div class="day-weather-div">
