update values - tenp, city and extra info  using api

--- a/index.html
+++ b/index.html
@@ -33,21 +33,22 @@
       <section class="weather-section">
         <div class="day-weather-div">
           <div class="div-current-temp">
-            <div class="current-temp">23</div>
+            <div class="current-temp" id="current_temp"></div>
             <div class="current-temp-unit">ºC</div>
-            <div class="material-symbols-outlined main-icon">
+            <div class="material-symbols-outlined main-icon" id="icon_sky">
               partly_cloudy_day
             </div>
           </div>
           <div class="div-city-date">
-            <h1>Lisbon</h1>
+            <h1>ahsh</h1>
             <p>monday, 12 november 2023 | 12:10</p>
-            <span class="value-hum-wind">Partly Cloudy</span>
+            <span class="value-hum-wind" id="sky">Partly Cloudy</span>
             <span class="value-paramenter"
-              >Humidity: <span class="value-hum-wind">55%</span></span
+              >Humidity:
+              <span class="value-hum-wind" id="humidity">55%</span></span
             >
             <span class="value-paramenter"
-              >Wind: <span class="value-hum-wind">12km/h</span></span
+              >Wind: <span class="value-hum-wind" id="wind">12km/h</span></span
             >
           </div>
         </div>
