inject more data - time

--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
             </div>
           </div>
           <div class="div-city-date">
-            <h1>ahsh</h1>
-            <p>monday, 12 november 2023 | 12:10</p>
-            <span class="value-hum-wind" id="sky">Partly Cloudy</span>
+            <h1></h1>
+            <p id="date_hours"></p>
+            <span class="value-hum-wind" id="sky"></span>
             <span class="value-paramenter"
-              >Humidity:
-              <span class="value-hum-wind" id="humidity">55%</span></span
-            >
+              >Humidity: <span class="value-hum-wind" id="humidity"></span
+            ></span>
             <span class="value-paramenter"
-              >Wind: <span class="value-hum-wind" id="wind">12km/h</span></span
-            >
+              >Wind: <span class="value-hum-wind" id="wind"></span
+            ></span>
           </div>
         </div>
         <div class="week-weather-div">
