change icon to img

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
           <div class="div-current-temp">
             <div class="current-temp" id="current_temp"></div>
             <div class="current-temp-unit">ºC</div>
-            <div class="material-symbols-outlined main-icon" id="icon_sky">
-              partly_cloudy_day
-            </div>
+            <img
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-night.png"
+              class="main-icon"
+              id="icon_sky"
+            />
           </div>
           <div class="div-city-date">
             <h1></h1>
