icon update - api source img

--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
           <div class="div-current-temp">
             <div class="current-temp" id="current_temp"></div>
             <div class="current-temp-unit">ºC</div>
-            <img
-              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-night.png"
-              class="main-icon"
-              id="icon_sky"
-            />
+            <div id="icon_sky"></div>
           </div>
           <div class="div-city-date">
             <h1></h1>
