inject forecast list into js, and add classes to ul and li

--- a/index.html
+++ b/index.html
@@ -50,43 +50,7 @@
           </div>
         </div>
         <div class="week-weather-div">
-          <ul>
-            <li>
-              <span class="material-symbols-outlined week-icon"> sunny </span>
-              <span class="span-weekdays">
-                <h3>Tuesday</h3>
-                <p>22ºc <span class="value-min">17ºC</span></p>
-              </span>
-            </li>
-            <li>
-              <span class="material-symbols-outlined week-icon"> sunny </span>
-              <span class="span-weekdays">
-                <h3>Wednesday</h3>
-                <p>22ºc <span class="value-min">17ºC</span></p>
-              </span>
-            </li>
-            <li>
-              <span class="material-symbols-outlined week-icon"> sunny </span>
-              <span class="span-weekdays">
-                <h3>Thursday</h3>
-                <p>22ºc <span class="value-min">17ºC</span></p>
-              </span>
-            </li>
-            <li>
-              <span class="material-symbols-outlined week-icon"> sunny </span>
-              <span class="span-weekdays">
-                <h3>Friday</h3>
-                <p>22ºc <span class="value-min">17ºC</span></p>
-              </span>
-            </li>
-            <li>
-              <span class="material-symbols-outlined week-icon"> sunny </span>
-              <span class="span-weekdays">
-                <h3>Saturday</h3>
-                <p>22ºc <span class="value-min">17ºC</span></p>
-              </span>
-            </li>
-          </ul>
+          <ul id="forecast-week-list"></ul>
         </div>
       </section>
     </main>
