Correction on forecast (days ahead without today) and update css

--- a/index.html
+++ b/index.html
@@ -39,14 +39,18 @@
           </div>
           <div class="div-city-date">
             <h1></h1>
-            <p id="date_hours"></p>
-            <span class="value-hum-wind" id="sky"></span>
-            <span class="value-paramenter"
-              >Humidity: <span class="value-hum-wind" id="humidity"></span
-            ></span>
-            <span class="value-paramenter"
-              >Wind: <span class="value-hum-wind" id="wind"></span
-            ></span>
+            <p class="date-hours" id="date_hours"></p>
+            <p id="temperature_max_min">
+              max:
+              <span class="values-style" id="temp_max_value"> </span>
+              min:
+              <span class="values-style" id="temp_min_value"> </span>
+              <span id="sky"></span>
+            </p>
+            <p>
+              humidity: <span class="values-style" id="humidity"> </span> wind:
+              <span class="values-style" id="wind"> </span>
+            </p>
           </div>
         </div>
         <div class="week-weather-div">
